# WatchyOS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
.github/workflows/: main.yml
components/ArduinoNvs/: CMakeLists.txt
components/DS3232RTC/: CMakeLists.txt
components/GfxLibrary/: CMakeLists.txt
components/GxEPD2/: CMakeLists.txt
components/NTPClient/: CMakeLists.txt
components/Time/: CMakeLists.txt
components/Watchy/: CMakeLists.txt
components/WiFiManager/: CMakeLists.txt
components/pcf8563/: CMakeLists.txt
main/: CMakeLists.txt  hello_world_main.c  main.cpp
